Added basic views and urls

--- a/Reviews/templates/song_review_list.html
+++ b/Reviews/templates/song_review_list.html
@@ -2,4 +2,11 @@
 
 {% block content %}
 <h2>Song Review List</h2>
+{% if latest_reviews %}
+    {% for review in latest_reviews %}
+    <h5><a href="{% url 'song_reviews:song_review_detail' review.id %}">{{ review.song.romaji_title }} ({{ review.song.kanji_title }})</h5>
+    <p>{{ review.rating }} out of 5 by <a href="{% url 'song_reviews:user_review_list' review.user_name %}">{{ review.user_name }}</p>
+    <p>Comment: {{ review.comment }}</p></br>
+    {% endfor %}
+{% endif %}
 {% endblock %}
